<resources>
    <string name="app_name">My trip</string>
    <string name="title_activity_navigation">My Trip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about_us">About Us</string>
    <string name="contact_menu">Contact</string>
    <string name="contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="introduce_password">Introduce password</string>
    <string name="introduce_email">Introduce email</string>
    <string name="introduce_username">Introduce username</string>
    <string name="empty_field_fields">empty field/fields</string>
    <string name="invalid_email_adress">Incorrect email address or password</string>
    <string name="menu_favorite">Favorites</string>
    <string name="favorite">Favorites</string>
    <string name="trip_destination">Trip Destination</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="save_trip">Save Trip</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="edit_trip">EDIT TRIP</string>
    <string name="password_error">passwords do not match</string>
    <string name="invalid_mail">Mail is invalid</string>
    <string name="fields_error">all fields must be completed</string>
    <string name="trip_added">Trip added</string>
    <string name="favotite_trip">Favorite trip</string>

</resources>