<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/home"
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:icon="@drawable/aboutus"
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />

        <item
            android:icon="@drawable/contact"
            android:id="@+id/nav_contact"
            android:title="@string/contact" />

        <item
            android:icon="@drawable/share"
            android:id="@+id/nav_share"
            android:title="@string/share" />

        <item
            android:icon="@drawable/fav"
            android:id="@+id/nav_favorite"
            android:title="@string/favorite" />

    </group>
</menu>