<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.triptime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.triptime.ui.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.triptime.ui.contact.ContactFragment"
        android:label="@string/contact_menu"
        tools:layout="@layout/contact_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.triptime.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/share_fragment"/>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.triptime.ui.favorites.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite"/>
</navigation>